Redefined structure for the thesis. The file: planning.tex is no more valid. Everything will be written directly into the chapters.

--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -3,7 +3,8 @@
 \label{ch:ActiveEdgeSensors}
 %==============================================================================    
 
-\section{Active-edge sensors}
+%% --------------------------------------------- %%
+\section{Introduction}
 
 Thin n-in-p planar sensors produced by
 Advacam~\cite{AdvacamRef} are bump bonded to the Timepix3
@@ -93,6 +94,7 @@ The IV measurement is shown in Figure~\ref{fig:IVmeasurements}.
   \label{fig:IVmeasurements}
 \end{figure}
 
+\subsection{Sensor geometries}
 The layers in the geometry description are defined in
 Figure~\ref{fig:PixelLayout} and explained in
 Table~\ref{tab:PixelStackDimensions}.
@@ -349,7 +351,7 @@ differente from above.
   \label{fig:55-GNDGR-150_eff_TOT}
 \end{figure}
 
-
+%% --------------------------------------------- %%
 \section{TCAD simulations}
 \subsection{Process flow for the active-edge designs}
 
@@ -448,6 +450,8 @@ Figure~\ref{fig:TCAD_dopingConcentration}.
   \caption{Doping concentration in TCAD simulations.}
   \label{fig:TCAD_dopingConcentration}
 \end{figure}
+
+\subsection{Validation of simulation with data}
 % \begin{figure}[htbp]
 %   \centering
 %   \begin{minipage}[t]{.4\textwidth}
