--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -2,3 +2,18 @@
 \chapter{CLIC: the Compact LInear Collider}
 \label{ch:CLIC}
 %==============================================================================    
+
+\section{Motivation (post-LHC)}
+Accelerator (two-beam acceleration), CLIC detector concept, picture of
+the full detector (3 pages)
+
+\section{Vertex detectors for CLIC}
+motivation for pixel detectors in high-energy physics (flavour-tagging
+plots), requirements, design, technical challenges
+(cooling/mechanics), Beam induced backgrounds, Radiation damage in the
+vertex detector (3 pages).
+
+
+\section{Detector simulation software}
+say motivation of this thesis $\Rightarrow$ provide input for the
+digitiser (1 page).
