Removed planning section

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -202,7 +202,7 @@
 
 %------------------------------------------------------------------------------
 % Add your chapters here - don't forget to also add them to \includeonly above
-\input{include/planning}
+%\input{include/planning}
 \input{include/Introduction}
 \input{include/CLIC}
 \input{include/Silicon}
