Added appendix for Active edge TCAD simulations with the doping concentrations.

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -109,10 +109,15 @@
 % Note that \includeonly can be quite picky! Do not forget to put a
 % comma after the filename, otherwise it will simply be ignored!
 \includeonly{%
-  planning,
-  Silicon,
-  Calibration,
-  appendix_TODO,
+  include/Introduction,
+  include/CLIC,
+  include/Silicon,
+  include/Calibration,
+  include/Telescope,
+  include/ThinSensors,
+  include/ActiveEdgeSensors,
+  include/Conclusions,
+  include/appendix_ActiveEdgeSensors,
   refs,
 }
 
@@ -237,7 +242,7 @@
 \appendix
 \part*{Appendix}
 % Add your appendices here - don't forget to also add them to \includeonly above
-\include{include/appendix_TODO}
+\include{include/appendix_ActiveEdgeSensors}
 \printbibliography[heading=subbibliography]
 
 %------------------------------------------------------------------------------
