--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -352,6 +352,7 @@ differente from above.
 \end{figure}
 
 %% --------------------------------------------- %%
+\newpage
 \section{TCAD simulations}
 \subsection{Process flow for the active-edge designs}
 
@@ -416,42 +417,14 @@ Masks limit the etching and the deposition to a certain range of
 window and provide the possibility to imitate the lithographic
 patterning.
 
-
-
 The doping concentration for the different layouts is shown in
 Figure~\ref{fig:TCAD_dopingConcentration}.
 
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\linewidth}
-    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_NoGR.png}
-    \caption{20-NGR}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\linewidth}
-    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_FloatGR.png}
-    \caption{23-FGR}
-  \end{subfigure} \\
-  \begin{subfigure}[b]{0.5\linewidth}
-    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_28_GNDGR.png}
-    \caption{28-GNDGR}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\linewidth}
-    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR.png}
-    \caption{55-GNDGR}
-  \end{subfigure} \\
-  \begin{subfigure}[b]{0.5\linewidth}
-    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR_100.png}
-    \caption{55-GNDGR-100}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\linewidth}
-    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR_150.png}
-    \caption{55-GNDGR-150}
-  \end{subfigure}
-  \caption{Doping concentration in TCAD simulations.}
-  \label{fig:TCAD_dopingConcentration}
-\end{figure}
+\subsection{Electric field distribution in simulations}
 
 \subsection{Validation of simulation with data}
+
+
 % \begin{figure}[htbp]
 %   \centering
 %   \begin{minipage}[t]{.4\textwidth}
