[ActiveEdgeSensors] Efield distribution in 2D in TCAD. Efield and EPotential for a cut at the surface.

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -87,6 +87,7 @@
 \newcommand{\cmsquared}{\ensuremath{\text{cm}^{2}}\xspace}
 \newcommand{\inversecmcubic}{\ensuremath{\text{cm}^{-3}}\xspace}
 \newcommand{\inversecmsquared}{\ensuremath{\text{cm}^{-2}}\xspace}
+\newcommand{\voltpercm}{\ensuremath{\mathrm{V/cm}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
