Implementation of Dominik's comments on silicon chapter

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -273,3 +273,15 @@ keywords = "Global least-squares fit "
       reportNumber   = "RX-1548",
       SLACcitation   = "%%CITATION = PIREA,27,584;%%"
 }
+
+@article{Lynch:1990sq,
+      author         = "Lynch, Gerald R. and Dahl, Orin I.",
+      title          = "{Approximations to multiple Coulomb scattering}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "B58",
+      year           = "1991",
+      pages          = "6-10",
+      doi            = "10.1016/0168-583X(91)95671-Y",
+      reportNumber   = "LBL-28165-REV, LBL-28165",
+      SLACcitation   = "%%CITATION = NUIMA,B58,6;%%"
+}
